# dgp-project

./: .gitignore  CMakeLists.txt  README.md
OpenGP/GL/: GlfwWindow.h
circle_sphere_prototype/: main.cpp
project/: CMakeLists.txt  Doxyfile  circle_constraint.cpp  circle_sphere_constraint_base.cpp  closeness_constraint.cpp  constraint.cpp  constraint_base.cpp  has_mesh.cpp  line_constraint.cpp  line_plane_constraint_base.cpp  main.cpp  main.cpp.autosave  plane_constraint.cpp  rigid_constraint.cpp  rigid_similarity_constraint_base.cpp  scaling_constraint.cpp  similarity_constraint.cpp  solver.cpp  sphere_constraint.cpp  vertex_constraint_base.cpp  vertices_constraint_base.cpp  window_base.cpp
project/include/: optional.hpp
project/include/csc486a/: circle_constraint.hpp  circle_sphere_constraint_base.hpp  closeness_constraint.hpp  constraint.hpp  constraint_base.hpp  has_mesh.hpp  line_constraint.hpp  line_plane_constraint_base.hpp  plane_constraint.hpp  rigid_constraint.hpp  rigid_similarity_constraint_base.hpp  scaling_constraint.hpp  similarity_constraint.hpp  solver.hpp  sphere_constraint.hpp  vertex_constraint_base.hpp  vertices_constraint_base.hpp  window_base.hpp
rigid_similarity_prototype/: main.cpp
